--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <li><a href="/task-3.html">task-3</a></li>
       <li><a href="/task-4.html">task-4</a></li>
       <li><a href="/task-5.html">task-5</a></li>
+      <li><a href="/task-6.html">task-5</a></li>
+      <li><a href="/task-7.html">task-5</a></li>
+      <li><a href="/task-8.html">task-5</a></li>
     </ul>
   </body>
 </html>
