--- a/task-7.html
+++ b/task-7.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+
     <script src="./js/task-7.js" type="module"></script>
   </body>
 </html>
