--- a/task-8.html
+++ b/task-8.html
@@ -8,6 +8,14 @@
   </head>
 
   <body>
+    <div id="controls">
+      <input type="number" min="0" max="100" step="1" />
+      <button type="button" data-action="render">Создать</button>
+      <button type="button" data-action="destroy">Очистить</button>
+    </div>
+
+    <div id="boxes"></div>
+
     <script src="./js/task-8.js" type="module"></script>
   </body>
 </html>
