task-8 isn't finished

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Task 1 -->
-
+    <h1>task-1</h1>
     <ul id="categories">
       <li class="item">
         <h2>Животные</h2>
@@ -46,20 +46,21 @@
     <br />
     <br />
     <br />
+    <h1>task-2</h1>
     <ul id="ingredients"></ul>
 
     <!-- Task 3 -->
     <br />
     <br />
     <br />
-
+    <h1>task-3</h1>
     <ul id="gallery"></ul>
 
     <!-- Task 4 -->
     <br />
     <br />
     <br />
-
+    <h1>task-4</h1>
     <div id="counter">
       <button type="button" data-action="decrement">-1</button>
       <span id="value">0</span>
@@ -70,7 +71,7 @@
     <br />
     <br />
     <br />
-
+    <h1>task-5</h1>
     <input type="text" placeholder="Ваше имя?" id="name-input" />
     <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
@@ -78,7 +79,7 @@
     <br />
     <br />
     <br />
-
+    <h1>task-6</h1>
     <input
       type="text"
       id="validation-input"
@@ -90,25 +91,23 @@
     <br />
     <br />
     <br />
-
+    <h1>task-7</h1>
     <input id="font-size-control" type="range" />
     <br />
     <span id="text">Абракадабра!</span>
 
-    <!-- Task 8 -->
+    <!-- Task 8
     <br />
     <br />
     <br />
-
+    <h1>task-8</h1>
     <div id="controls">
       <input type="number" min="0" max="100" step="1" />
       <button type="button" data-action="render">Создать</button>
       <button type="button" data-action="destroy">Очистить</button>
     </div>
 
-    <div id="boxes"></div>
-
-    <script src="./js/task-8.js" type="module"></script>
+    <div id="boxes"></div> -->
 
     <!-- Script links -->
 
@@ -119,6 +118,6 @@
     <script src="./js/task-5.js" type="module"></script>
     <script src="./js/task-6.js" type="module"></script>
     <script src="./js/task-7.js" type="module"></script>
-    <script src="./js/task-8.js" type="module"></script>
+    <!-- <script src="./js/task-8.js" type="module"></script> -->
   </body>
 </html>
